--- a/bin/jdbcConfig.properties
+++ b/bin/jdbcConfig.properties
@@ -3,4 +3,4 @@ myMessgage=This is the message from the the property file.
 dbDriverName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 dbUser=sa
 dbPassword=qwe
-dbURI=jdbc:sqlserver://10.178.22.41:1433;databaseName=DYNN
+dbURI=jdbc:sqlserver://localhost:1433;databaseName=DYNN
